# simple-bbs-server-ot

./: .gitignore  Dockerfile  README.md  pyproject.toml
simple_bbs/: crud.py  database.py  main.py  models.py  schemas.py  utils.py
